--- a/.deployment/docker/docker-compose.yml
+++ b/.deployment/docker/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     volumes:
       - ./../../:/var/www/order-processing:rw
     depends_on:
-      - php-fpm
+      - order-proc-fpm
 
   order-proc-postgres:
     container_name: order-proc-postgres
