DEV Added response assembler

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,3 +12,7 @@ services:
             - '../src/Domain/Entity/'
             - '../src/Domain/ValueObject/'
             - '../src/Kernel.php'
+
+    App\Application\UseCase\GetFullBasketUseCase:
+        arguments:
+            $responseAssembler: '@App\Application\Assembler\Response\GetFullBasketResponseAssembler'
