--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -6,6 +6,7 @@ framework:
                 middleware:
                     - doctrine_transaction
             query.bus:
+                default_middleware: allow_no_handlers
 
         transports:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
