--- a/.env.dist
+++ b/.env.dist
@@ -13,3 +13,7 @@ DATABASE_URL=
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
+
+###> http-slient
+PRODUCT_API_URL=
+###< http-slient
