Feature-basket-setup Finished with set up domain method.

--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -6,3 +6,6 @@ services:
 
   App\Application\Assembler\Response\GetFullBasketResponseAssembler:
     public: true
+
+  App\Domain\Service\DeliveryCostCalculator:
+    public: true
