--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,6 +26,14 @@ services:
             tags:
                 - { name: messenger.message_handler, bus: query.bus }
 
+    # Middlewares
+    App\Infrastructure\Middleware\ExceptionFormatterMiddleware:
+        arguments:
+            $env: '%kernel.environment%'
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception }
+
+    # Usecases
     App\Application\UseCase\GetFullBasketUseCase:
         arguments:
             $responseAssembler: '@App\Application\Assembler\Response\GetFullBasketResponseAssembler'
