--- a/config/validator/validation.yaml
+++ b/config/validator/validation.yaml
@@ -1,43 +1,32 @@
 App\Application\Request\SetUpBasketRequest:
   properties:
     regionCode:
-      - NotNull:
-          message: 'Region code is required'
-
-    userId:
-      - NotNull:
-          message: 'User id required'
+      - Choice:
+          message: 'Unknown region {{ value }}.'
+          callback: [App\Domain\Enum\RegionCodeEnum, 'values']
 
     orderDate:
-      - NotNull:
-          message: 'Order date required'
       - DateTime:
           format: 'Y-m-d\TH:i:sP'
-          message: 'Incorrect date time format'
-      - LessThan:
-          value: now
-          message: 'Order date can not be in the past'
-
-    isDelivery:
-      - NotNull:
-          message: 'Region code is required'
+          message: 'Incorrect date time format.'
+      - App\Infrastructure\Service\Validation\Constraint\OrderDate\OrderDateOnlyInFuture: ~
 
     shopNumber:
       - Expression:
           expression: "(this.isDelivery === false & this.shopNumber !== null) | (this.isDelivery === true & (this.shopNumber === null | this.shopNumber !== null))"
-          message: 'Shop number is required for pick up orders'
+          message: 'Required if isDelivery is false.'
 
     slotNumber:
       - Expression:
-          expression: "(this.isDelivery === false & (this.slotNumber === null | this.slotNumber !== null)) | (this.isDelivery === true & this.shopNumber !== null)"
-          message: 'Slot number is required for delivery orders'
+          expression: "(this.isDelivery === false & (this.slotNumber === null | this.slotNumber !== null)) | (this.isDelivery === true & this.slotNumber !== null)"
+          message: 'Slot number is required for delivery orders.'
 
     distance:
       - Expression:
           expression: "(this.isDelivery === false & (this.distance === null | this.distance !== null)) | (this.isDelivery === true & this.distance !== null)"
-          message: 'Distance parameter is required for delivery orders'
+          message: 'Distance parameter is required for delivery orders.'
 
     longDuration:
       - Expression:
           expression: "(this.isDelivery === false & (this.longDuration === null | this.longDuration !== null)) | (this.isDelivery === true & this.longDuration !== null)"
-          message: 'Long duration parameter is required for delivery orders'
+          message: 'Long duration parameter is required for delivery orders.'
