--- a/.env.dist
+++ b/.env.dist
@@ -16,4 +16,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> http-slient
 PRODUCT_API_URL=
+SHOP_API_URL=localhost:3001
 ###< http-slient
