Feature-basket-setup Fixed shop http API client.

--- a/.env.dist
+++ b/.env.dist
@@ -16,5 +16,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> http-slient
 PRODUCT_API_URL=
-SHOP_API_URL=localhost:3001
+SHOP_API_URL=http://172.17.0.1:3001
 ###< http-slient
