Feature-basket-setup Added external mockoon connection.

--- a/.deployment/docker/docker-compose.yml
+++ b/.deployment/docker/docker-compose.yml
@@ -15,6 +15,8 @@ services:
         PUID: ${PUID}
         PGID: ${PGID}
         INSTALL_XDEBUG: ${INSTALL_XDEBUG}
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
     environment:
       PUID: ${PUID}
       PGID: ${PGID}
