Feature-basket-setup Added slot API realization.

--- a/.env.dist
+++ b/.env.dist
@@ -15,6 +15,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> http-slient
-PRODUCT_API_URL=
+PRODUCT_API_URL=http://172.17.0.1:3001
 SHOP_API_URL=http://172.17.0.1:3001
 ###< http-slient
