--- a/config/packages/parameters.yaml
+++ b/config/packages/parameters.yaml
@@ -4,3 +4,8 @@ parameters:
     timeout: 30
     headers:
       Content-Type: application/json
+  config_delivery_slop_api:
+    base_uri: '%env(SHOP_API_URL)%'
+    timeout: 30
+    headers:
+      Content-Type: application/json
