--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "ut": [
+            "php bin/phpunit tests/Unit/"
         ]
     },
     "conflict": {
