Feature-basket-setup Added success basket set up tests.

--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -9,3 +9,5 @@ services:
 
   App\Domain\Service\DeliveryCostCalculator:
     public: true
+  App\Domain\Factory\BasketDeliveryFactory:
+    public: true
