--- a/composer.json
+++ b/composer.json
@@ -80,6 +80,7 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.66",
         "phpunit/phpunit": "^11.5",
         "symfony/browser-kit": "7.1.*",
         "symfony/css-selector": "7.1.*",
