--- a/composer.json
+++ b/composer.json
@@ -68,6 +68,15 @@
         ],
         "ut": [
             "php bin/phpunit tests/Unit/"
+        ],
+        "ft": [
+            "php bin/phpunit tests/Functional/"
+        ],
+        "cs-check": [
+            "vendor/bin/php-cs-fixer fix --dry-run --diff"
+        ],
+        "cs-fix": [
+            "vendor/bin/php-cs-fixer fix"
         ]
     },
     "conflict": {
