--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
+            "phpstan/extension-installer": true,
             "symfony/flex": true,
             "symfony/runtime": true
         },
@@ -77,6 +78,12 @@
         ],
         "cs-fix": [
             "vendor/bin/php-cs-fixer fix"
+        ],
+        "stan": [
+            "vendor/bin/phpstan analyse -c phpstan.neon"
+        ],
+        "stan_ddd": [
+            "vendor/bin/phpstan analyse -c phpstan-ddd.neon"
         ]
     },
     "conflict": {
@@ -90,6 +97,10 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.66",
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-doctrine": "^2.0",
+        "phpstan/phpstan-symfony": "^2.0",
         "phpunit/phpunit": "^11.5",
         "symfony/browser-kit": "7.1.*",
         "symfony/css-selector": "7.1.*",
