Refactoring-add-stat-analyzers Added new skipped violation.

--- a/deptrac.yaml
+++ b/deptrac.yaml
@@ -34,3 +34,5 @@ parameters:
     App\Domain\Entity\Basket:
       - Doctrine\Common\Collections\Collection
       - Doctrine\Common\Collections\ArrayCollection
+    App\Application\Command\UpdateBasket\UpdateBasketHandler:
+      - Doctrine\ORM\OptimisticLockException
